--- a/style.css
+++ b/style.css
@@ -1,12 +1,56 @@
 body{
 	background-color: #777;
+	margin: 0;
+	padding: 0;
+	font-family: Arial ;
+	font-size: 18px;
 
 }
-header .box{
+header{
 	border-style: solid;
-	color: #ebebeb;
-	float: left;
-	position: relative;
-	width: 80px;
+	color: #777;
+	background: #ebebeb;
+	padding: 20px;
+	margin: 20px;
+	text-align: center;
+}
+
+aside{
+	border-style: solid;
+	color: #777;
+	background: #ebebeb;
+	padding: 20px;
+	margin: 20px;
+	text-align: center;
+	float: right;
+	height: 100px;
+}
+h1 h2 h3{
+	border-style: solid;
+	color: #777;
+	background: #ebebeb;
+	padding: 30px;
+	margin: 30px;
+	text-align: center;
 	
+
+}
+
+footer{
+	border-style: solid;
+	color: #777;
+	background: #ebebeb;
+	padding: 20px;
+	margin: 20px;
+	clear: both;
+	text-align: center;
+}
+
+nav{
+	border-style: solid;
+	color: #777;
+	background: #ebebeb;
+	padding: 20px;
+	margin: 20px;
+	text-align: center;
 }
