--- a/style.css
+++ b/style.css
@@ -1,94 +1,105 @@
-body{
+body { 
 	background-color: #777;
 	margin: 0;
-	padding: 0;
-	font-family: Arial ;
+	font-family: arial, helvetica, sans-serif;
 	font-size: 18px;
 
 }
-header{
-	border-style: solid;
-	color: #777;
-	background: #ebebeb;
-	padding: 20px;
-	margin: 20px;
+
+
+
+
+header {
 	text-align: center;
+	background-color: #ebebeb;
+	border: solid;
+	color: #777;
+	padding: 30px;
+	margin: auto;
+	width: 60%;
+}
+
+h1{
+	border: solid;
+	background-color: #ebebeb;
+	color: #777;
+	text-align: center;
+	float: left;
+	clear: both;
+	padding: 20px;
+	width: 30%;
+	margin: 20px;
+}
+
+p{
+	border: solid;
+	background-color: #ebebeb;
+	color: #777;
+	text-align: center;
+	float: left;
+	clear: both;
+	padding: 20px;
+	width: 30%;
+	margin: 20px;
+
+}
+
+
+article{
+	border: solid;
+	background-color: #ebebeb;
+	color: #777;
+	text-align: center;
+	float: left;
+	margin: 20px;
+	padding: 20px;
+	width: 30%;
+	clear: both;
+
+}
+
+nav {
+	text-align: center;
+	background-color: #ebebeb;
+	border: solid;
+	color: #777;
+	padding: 30px;
+	margin: auto;
+	width: 60%;
+}
+
+section {
+	text-align: center;
+	border: solid;
+	float: left;
+	background-color: #ebebeb;
+	color: #777;
+	margin: 40px;
+	padding: 40px;
+	width: 30%;
+	
 }
 
 aside{
-	border-style: solid;
-	color: #777;
-	background: #ebebeb;
-	padding: 20px;
-	margin: 20px;
-	margin-top: -40px;
 	text-align: center;
+	background-color: #ebebeb;
+	border: solid;
 	float: right;
-	height: 100px;
-}
-
-section{
-	border-style: solid;
 	color: #777;
-	background: #ebebeb;
-	padding: 20px;
-	margin: 20px;
-	text-align: center;
-}
+	padding: 30px;
+	margin: auto;
+	
 
-article{
-	border-style: solid;
-	color: #777;
-	background: #ebebeb;
-	padding: 20px;
-	margin: 20px;
-	text-align: center;
 
 }
-
-h1,h2,h3{
-	border-style: solid;
-	color: #777;
-	background: #ebebeb;
-	padding: 20px;
-	margin: 20px;
-	text-align: center;
-	float: left;
-	}
-p{
-	border-style: solid;
-	color: #777;
-	background: #ebebeb;
-	padding: 40px;
-	margin: 40px;
-	text-align: center;
-	float: left;
-	clear: both;
-}
-
 footer{
-	border-style: solid;
-	color: #777;
-	background: #ebebeb;
-	padding: 20px;
-	margin: 20px;
 	clear: both;
+	border: solid;
+	background-color: #ebebeb;
 	text-align: center;
-}
-
-nav{
-	border-style: solid;
 	color: #777;
-	background: #ebebeb;
-	padding: 20px;
+	padding: 40px;
 	margin: 20px;
-	text-align: center;
-}
-section{
-	border-style: solid;
-	color: #777;
-	background: #777;
-	padding: 10px;
-	margin: 10px;
-	text-align: center;
+
+
 }
